--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 								<h2 class="antialiased hover:subpixel-antialiased text-4xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-200 font-sans">About me</h2>
 							</div>
 							
-							<div class="flex flex-col xs:flex-row md:flex-row">
-								<div class="flex-auto w-auto xs:w-3/6">
+							<div class="flex flex-col sm:flex-row ">
+								<div class="flex-auto w-auto sm:w-3/6">
 									<p class="antialiased hover:subpixel-antialiased text-sm xs:text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl text-slate-500 font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 									<p class="antialiased hover:subpixel-antialiased text-sm xs:text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl text-slate-500 font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 								</div>
-								<div class="flex-auto w-auto xs:w-1/6"></div>
-								<div class="flex-auto w-auto order-first xs:w-2/6 xs:order-last">
+								<div class="flex-auto w-auto sm:w-1/6"></div>
+								<div class="flex-auto w-auto order-first sm:w-2/6 sm:order-last">
 									<img class="object-cover h-48 w-48 bg-loading" src="https://avatars.githubusercontent.com/u/72270864?s=400&u=aab5513c5cb0f4a82832aa9ffd3fd5e431a26969&v=4">
 								</div>
 								
