--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<a href="#about" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">About</a>
 					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Experience</a>
 					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Work</a>
-					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Contact</a>
-					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-bg-slate-500 hover:text-slate-50 hover:border-bg-slate-50">Resume</a>
+					<a href="#contact" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Contact</a>
+					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-slate-500 hover:text-slate-50 hover:border-slate-50">Resume</a>
 				</nav>
 			</div>
 			<div id="home" class="flex justify-items-center">
@@ -91,9 +91,27 @@
 				<div class="flex-auto w-1/6 "></div>
 			</div>
 
-			<div class="bottom-0 text-center mb-6 text-slate-400 hover:text-slate-300">
-				<a href="https://github.com/cvillanueva94/">Designed & Built by cvillanueva94</a>
+			<div id="contact">
+				<div  class="flex justify-items-center">
+					<div class="flex-auto w-1/6 "></div>
+					<div class="flex-auto w-4/6 ">
+						<div class="h-screen grid gap-4 content-center">
+							<div class="text-center space-y-5">
+								<p class="antialiased hover:subpixel-antialiased text-xl xs:text-xl sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl text-slate-200 font-sans">What’s Next?</p>
+								<p class="antialiased hover:subpixel-antialiased text-2xl xs:text-2xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl text-slate-200 font-sans">Get In Touch</p>
+								<p class="antialiased hover:subpixel-antialiased text-base xs:text-base sm:text-base md:text-lg lg:text-xl xl:text-2xl text-slate-200 font-sans">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+								<p><a href="mailto:krlosvilla101994@gmail.com" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-slate-500 hover:text-slate-50 hover:border-slate-50">Say Hello</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="flex-auto w-1/6 "></div>
+				</div>
+	
+				<div class="bottom-0 text-center mb-6 text-slate-400 hover:text-slate-300">
+					<a href="https://github.com/cvillanueva94/">Designed & Built by cvillanueva94</a>
+				</div>
 			</div>
+			
 		  </div>
 
 		  <footer class="absolute inset-x-0 ">
