--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Experience</a>
 					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Work</a>
 					<a href="#contact" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Contact</a>
-					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-slate-500 hover:text-slate-50 hover:border-slate-50">Resume</a>
+					<a href="./assets/Carlos_Alberto_Villanueva_Hedesa.pdf" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-slate-500 hover:text-slate-50 hover:border-slate-50">Resume</a>
 				</nav>
 			</div>
 			<div id="home" class="flex justify-items-center">
