--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			<div class="hidden md:block">
 				<nav class="flex sm:justify-end space-x-4 pt-6 pr-8">
 					<a href="#about" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">About</a>
-					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Experience</a>
-					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Work</a>
+					<!-- <a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Experience</a>
+					<a href="#" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Work</a> -->
 					<a href="#contact" class="rounded-lg px-3 py-2 text-slate-500 font-medium hover:text-slate-50">Contact</a>
 					<a href="./assets/Carlos_Alberto_Villanueva_Hedesa.pdf" class="rounded-lg px-3 py-2 text-slate-500 font-medium border-2 border-slate-500 hover:text-slate-50 hover:border-slate-50">Resume</a>
 				</nav>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="flex-auto w-auto sm:w-1/6"></div>
 								<div class="flex-auto w-auto order-first sm:w-2/6 sm:order-last">
-									<img class="object-cover h-48 w-48 bg-loading" src="https://avatars.githubusercontent.com/u/72270864?s=400&u=aab5513c5cb0f4a82832aa9ffd3fd5e431a26969&v=4">
+									<img class="object-cover h-64 w-64 bg-loading" src="https://avatars.githubusercontent.com/u/72270864?s=400&u=aab5513c5cb0f4a82832aa9ffd3fd5e431a26969&v=4">
 								</div>
 								
 							</div>
