--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<div class="h-screen grid gap-4 content-center">
 							<p class="antialiased hover:subpixel-antialiased text-sm xs:text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl text-white font-mono">Hi, my name is</p>
 							<h2 class="antialiased hover:subpixel-antialiased text-4xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-200 font-sans">Carlos Villanueva.</h2>
-							<h3 class="antialiased hover:subpixel-antialiased text-4xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-500 font-sans">Lorem ipsum dolor sit amet.</h3>
-							<p class="antialiased hover:subpixel-antialiased text-sm xs:text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl text-slate-500 font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+							<h3 class="antialiased hover:subpixel-antialiased text-4xl xs:text-4xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-500 font-sans">Programming my life.</h3>
+							<p class="antialiased hover:subpixel-antialiased text-sm xs:text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl text-slate-500 font-serif">I have dedicated my life to building tools that make people's lives easier. During this journey I have become currently the Backend Tech Lead in <a href="https://www.guajiritos.com/" class="text-slate-50 hover:text-slate-5">Guajiritos S.R.L.</a></p>
 					</div>
 				</div>
 				<div class="flex-auto w-1/6 "></div>
